[package]
name = "i48"
version = "1.2.0-dev"
edition = "2021"
license = "MIT"
description = "A Rust library for working with 48-bit integers."
readme = "README.md"
repository = "https://github.com/Chubercik/i48"
documentation = "https://docs.rs/i48"
categories = ["data-structures", "mathematics", "encoding"]

[dependencies]
bytemuck = "1.16.3"
num-traits = "0.2.19"

# Outdated `pyo3` version because `numpy` is lagging behind.
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }
numpy = { version = "0.21.0", optional = true }

[features]
pyo3 = ["dep:pyo3", "dep:numpy"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
